--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     <section class="hero">
         <h1>Welcome to Our Restaurant</h1>
         <p class="p">Indulge in a delightful dining experience with our expertly crafted dishes. Enjoy an unforgettable culinary journey!</p>
-        <a href="RESERVATIONS.HTML" class="btn">Make a Reservation</a>
+        <a href="reservations.html" class="btn">Make a Reservation</a>
     </section>
 
     <section class="menu" id="menu">
