--- a/message sent confirmation.html
+++ b/message sent confirmation.html
@@ -116,7 +116,7 @@
     <section class="confirmation-section">
         <h2>Your Message Has Been Sent!</h2>
         <p class="thank-you">Thank you for reaching out to us. We have received your message and will get back to you as soon as possible.</p>
-        <p>If you have any urgent questions, feel free to give us a call at <strong>+1 (234) 567-890</strong>.</p>
+        <p>If you have any urgent questions, feel free to give us a call at <strong>9260929949</strong>.</p>
         <a href="index.html" class="back-button">Back to Home</a>
     </section>
 
